# dataset_loader

./: .editorconfig  .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  README.ko.md  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  initialize_command.cmd  initialize_command.sh  post_create_command.sh
dataset_loader/: __init__.py
dataset_loader/abstract/: __init__.py  asr_sample.py  huggingface_dataset.py  huggingface_loader.py  huggingface_snapshot.py  ir_sample.py  parquet_dataset.py  parquet_loader.py
dataset_loader/base/: __init__.py  concat_dataset.py  constants.py  dataset.py  dataset_loader.py  sample.py
dataset_loader/esic/: __init__.py  algorithm.py  constants.py  esic_v1.py  esic_v1_dataset.py  esic_v1_sample.py
dataset_loader/interface/: __init__.py  concat_dataset.py  constants.py  dataset.py  dataset_loader.py  sample.py
dataset_loader/ksponspeech/: __init__.py  constants.py  ksponspeech.py  ksponspeech_dataset.py  ksponspeech_sample.py  preprocess.py
dataset_loader/librispeech/: __init__.py  constants.py  librispeech.py  librispeech_dataset.py  librispeech_sample.py
dataset_loader/protocol/: __init__.py  concat_dataset_protocol.py  dataset_protocol.py  sample_protocol.py
dataset_loader/tedlium/: __init__.py  algorithm.py  constants.py  segment_tedlium.py  segment_tedlium_dataset.py  segment_tedlium_sample.py  tedlium.py  tedlium_dataset.py  tedlium_sample.py
dataset_loader/wrapper/: __init__.py  concat_dataset_wrapper.py  dataset_mixin.py  dataset_wrapper.py  thread_loader_mixin.py
dataset_loader/wrapper/asr/: __init__.py  asr_concat_dataset.py  asr_constants.py  asr_dataset.py  asr_dataset_mixin.py  asr_dataset_ptc.py  asr_sample.py  protocol.py
dataset_loader/wrapper/image_recognition/: __init__.py  ir_dataset.py  ir_sample.py
dataset_loader/zerothkorean/: __init__.py  constants.py  zeroth_korean.py  zeroth_korean_dataset.py  zeroth_korean_sample.py
tests/: pytest.ini
tests/notebooks/: esic.ipynb  ksponspeech.ipynb  librispeech.ipynb  tedlium-segment.ipynb  tedlium.ipynb  word_count.ipynb  zerothkorean.ipynb
tests/notebooks/datasets/: esic.ipynb  ksponspeech.ipynb  librispeech.ipynb  tedlium-segment.ipynb  tedlium.ipynb  zerothkorean.ipynb
tests/unit/base/: __init__.py  dummy_dataset.py  mixin_dataset_test.py  test_dataset.py  test_sample.py
tests/unit/esic/: __init__.py  test_esic_v1.py
tests/unit/interface/: __init__.py  dummy_dataset.py  mixin_dataset_test.py  test_dataset.py  test_sample.py
tests/unit/ksponspeech/: __init__.py  test_ksponspeech.py
tests/unit/librispeech/: __init__.py  test_librispeech.py
tests/unit/protocol/: __init__.py  mixin_dataset_protocol_test.py
tests/unit/tedlium/: __init__.py  test_segment_tedlium.py  test_tedlium.py
tests/unit/wrapper/: __init__.py
tests/unit/wrapper/asr/: __init__.py  mixin_asr_dataset_test.py
tests/unit/wrapper/image_recognition/: __init__.py  mixin_ir_dataset_test.py
tests/unit/zerothkorean/: __init__.py  test_zeroth_korean.py
