[project]
name = "dataset_loader"
version = "0.1.0"
description = "Custom dataset loader"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "librosa>=0.11.0",
    "numpy>=1.23",
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
    "torchvision>=0.18.0",
    "sjpy",
    "datasets>=4.5.0",
    "torchcodec>=0.8.0",
    "pathvalidate>=3.3.1",
    "cachetools>=7.0.1",
    "ruff>=0.15.8",
    "requests>=2.32.5",
    "httpx>=0.28.1",
    "opencv-python-headless>=4.13.0.92",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.10",
    "matplotlib>=3.10.8",
    "notebook>=7.4.7",
]
test = [
    "pytest>=8.4.2",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.15.8",
]

[tool.pytest.ini_options]
env_files=[".env"]
addopts = "--ignore=tests/scripts"

[tool.setuptools.packages.find]
where = ["."]
include = ["dataset_loader*"]

[tool.uv.sources]
sjpy = {path = "modules/sjpy", editable = true}
